@@ -630,7 +630,7 @@ namespace tgui
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     public:
 
-        SignalItem onItemSelect = {"ItemSelected"}; ///< An item was selected in the combo box. Optional parameter: selected item
+        SignalItem onItemSelect = {"ItemSelected"}; ///< An item was selected in the combo box. Optional parameter: selected item or its index
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
